[tool.poetry]
name = "jiratools"
version = "2.1.0"
description = "Simple helpers to interface to JIRA from an API or command line."
authors = ["Brad Brown <brad@bradsbrown.com>"]
license = "MIT"
readme = "README.rst"
homepage = "https://github.com/jolly-good-toolbelt/jiratools/"
documentation = "https://jolly-good-toolbelt.github.io/jiratools/"
repository = "https://github.com/jolly-good-toolbelt/jiratools/"

[tool.poetry.dependencies]
python = "^3.6"
jira = "^2.0"

[tool.poetry.dev-dependencies]
sphinx-autodoc-typehints = "^1.6"
jgt_tools = "^0.4.0"

[tool.poetry.scripts]
jira-make-linked-issue = "jiratools:_create_test_jira_from"
jira-add-comment = "jiratools:_cli_add_comment"
jira-example-config = "jiratools:_example_config_install"
jira-search-issues = "jiratools:_cli_search"
jira-link-issues = "jiratools:cli_jira_link"
jira-update-assignee = "jiratools:_change_jira_assignee"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
