[tool.poetry]
name = "jiratools"
version = "2.1.0"
description = "Simple helpers to interface to JIRA from an API or command line."
authors = ["Brad Brown <brad@bradsbrown.com>"]
license = "MIT"
readme = "README.rst"
homepage = "https://github.com/jolly-good-toolbelt/jiratools/"
documentation = "https://jolly-good-toolbelt.github.io/jiratools/"
repository = "https://github.com/jolly-good-toolbelt/jiratools/"

[tool.poetry.dependencies]
python = "^3.6"
jira = "^2.0"
jgt_common = "^1.0"

[tool.poetry.dev-dependencies]
sphinx-autodoc-typehints = "^1.6"
jgt_tools = "^0.4.0"

[tool.poetry.scripts]
jiratool = "jiratools:main"
jira-add-comment = "jiratools:add_comment"
jira-example-config = "jiratools:example_config_install"
jira-link-issues = "jiratools:jira_link"
jira-make-linked-issue = "jiratools:make_linked"
jira-search-issues = "jiratools:search"
jira-update-assignee = "jiratools:reassign"

[tool.jgt_tools]
env_setup_commands = [
    "poetry run pip install --upgrade pip",
    "poetry install",
    "poetry run pre-commit install"
]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
